--- a/Content/Index.html
+++ b/Content/Index.html
@@ -16,9 +16,9 @@
 	<link rel="shortcut icon" href="img/favicons.png">
 
 	<!--HTML5 SHIV-->
-	<!--[if lt IE 9]>
+	<![if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
-	<![endif]-->
+	<![endif]>
 
 </head>
 <body>
@@ -36,13 +36,13 @@
 			</div><!--END CENTER BUTTON-->
 
 			<div id="social"><!--SNS LINKS-->
-				<a href=""><img src="img/instagram.png"></a>
-				<a href=""><img src="img/twitter.png"></a>
-				<a href=""><img src="img/facebook.png"></a>
-				<a href=""><img src="img/youtube.png"></a>
-				<a href=""><img src="img/vlive.png"></a>
-				<a href=""><img src="img/fans.png"></a>
-				<a href=""><img src="img/edm.png"></a>
+				<a href="https://instagram.com/twicetagram"><img src="img/instagram.png"></a>
+				<a href="https://twitter.com/JYPETWICE"><img src="img/twitter.png"></a>
+				<a href="https://www.facebook.com/JYPETWICE?_rdc=1&_rdr"><img src="img/facebook.png"></a>
+				<a href="https://www.youtube.com/c/twice"><img src="img/youtube.png"></a>
+				<a href="https://www.vlive.tv/channel/EDBF"><img src="img/vlive.png"></a>
+				<a href="https://fans.jype.com/Portal"><img src="img/fans.png"></a>
+				<a href="https://edm-wish.jype.com/"><img src="img/edm.png"></a>
 			</div><!--END SNS LINKS-->
 
 			<div class="right_content">
@@ -52,7 +52,7 @@
 				</div><!--END MENU-->
 
 				<div class="main_album_name wow fadeInRight" data-wow-delay="0.2s"><!--MAIN TITLE-->
-					<a href="">CRY FOR ME</a>
+					<a href="https://twice.jype.com/Default/DiscographyView?AamSeq=130">CRY FOR ME</a>
 				</div><!--END MAIN TITLE-->
 
 				<div class="mg"><!--GENERAL MARGIN-->
@@ -60,8 +60,8 @@
 					<div id="hr"></div><!--HORIZONTAL LINE-->
 
 					<div class="notice"><!--NOTICES-->
-						<a id="title" href="">NOTICE</a><br>
-						<a id="resume" href="">Happy Birthday MINA</a>
+						<a id="title" href="https://twice.jype.com/Default/NoticeList">NOTICE</a><br>
+						<a id="resume" href="https://twice.jype.com/Default/NoticeView?AnSeq=2593">Happy Birthday MINA</a>
 					</div><!--END NOTICES-->
 
 					<div id="assign"><!--FOOTER-->
